--- a/kooplexhub/volume/templates/volume_configure.html
+++ b/kooplexhub/volume/templates/volume_configure.html
@@ -1,24 +1,12 @@
-{% extends "storage_layout.html" %}
+{% extends "volume_layout.html" %}
 {% load render_table from django_tables2 %}
 {% load extras %}
 
 {% block head_content %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/css/bootstrap5-toggle.min.css" rel="stylesheet">
-<style>
-.mytab{
-  color: rgb(196, 196, 196);
-}
-.mytab:hover{
-  color: rgb(196, 196, 196);
-  font-weight: bolder;
-}
-.mytab.active {
-  font-weight: bolder;
-}
-</style>
 {% endblock %}
 
-{% block realcontent %}
+{% block bodycontent %}
 <div class="container" style="overflow-x:hidden;">
   <div id="volumeConfogTabs" class="card shadow p-3 mt-3 bg-light rounded">
 <form id="volume-manage" class="form-horizontal" action="{% url 'volume:configure' volume.id %}" method="post">
@@ -30,28 +18,32 @@
       <a class="nav-link mytab {% if active == "meta" %}active{% endif %}" id="tab-meta" data-bs-toggle="tab" href="#meta" role="tab" aria-controls="meta" aria-selected="{% if active == "meta" %}true{% else %}false{% endif %}">Meta</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a class="nav-link mytab {% if active == "share" %}active{% endif %}" id="tab-share" data-bs-toggle="tab" href="#share" role="tab" aria-controls="share" aria-selected="{% if active == "share" %}true{% else %}false{% endif %}">Share</a>
+      {% if is_attachment %}
+        <a class="nav-link mytab disabled" id="tab-share" data-bs-toggle="tab" href="#share" role="tab" aria-controls="share" aria-selected="false">Share</a>
+      {% else %}
+        <a class="nav-link mytab {% if active == "share" %}active{% endif %}" id="tab-share" data-bs-toggle="tab" href="#share" role="tab" aria-controls="share" aria-selected="{% if active == "share" %}true{% else %}false{% endif %}">Share</a>
+      {% endif %}
     </li>
+    {#FIXME: ADD delete/leave tab #}
   </ul>
   <div class="tab-content" id="volumeConfigTabsContent">
     <div class="tab-pane fade {% if active == "meta" %}show active{% endif %}" id="meta" role="tabpanel" aria-labelledby="tab-meta">
-      <h5 class="card-title mt-2">Describe your volume</h5>
-      <textarea class="form-control" rows="6" cols="50" id="description" name="description">{{ volume.description }}</textarea>
-      <h5 class="card-title mt-2">Change the scope for this volume</h5>
-      <select class="form-control" id="volume_scopes-{{ volume.id }}" name="volume_scope">
-        {% for k, v in volume.SCP_LOOKUP.items %}
-          <option value="{{ k }}" {% if volume.scope == k %} selected {% endif %}>{{ v }}</option>
-        {% endfor %}
-      </select>
+      <table>
+        {{ form.as_table }}
+      </table>
     </div>
     <div class="tab-pane fade {% if active == "share" %}show active{% endif %}" id="share" role="tabpanel" aria-labelledby="tab-share">
       <div class="d-flex flex-row align-items-baseline">
         <div class="flex-fill w-100 me-1">
           <input class="form-control me-2 mb-3 mt-3" type="text" id="search_collaborator" placeholder="Search collaborator" title="Type in a name">
-          {% render_table t_users %}
+          {% if form.t_users %}
+            {% render_table form.t_users %}
+          {% endif %}
         </div>
         <div class="flex-fill w-100 mb-1">
-          {% render_table t_collaborators %}
+          {% if form.t_collaborators %}
+            {% render_table form.t_collaborators %}
+          {% endif %}
         </div>
       </div>
     </div>
@@ -64,10 +56,24 @@
 
 {% block scripts %}
 <script>  
+{# catch submit event, in order to fill properly the share volume information #}
+$("#volume-manage").submit(function (e) {
+  bindings = $.map($("input[name=uservolumebinding_id]"), function (k, v) { return $(k).val(); });
+  bind_users = $.map($("input[name=user_id]"), function (k, v) { return $(k).val(); });
+  console.log( $("input[id^=admin-]") );
+  admin_users = $.map($("input[id^=admin-]"), function (k, v) { if ($(k).attr('checked')) { return $(k).attr("id").split("-",2)[1] }; }); //FIXME
+  console.log( bindings, bind_users, admin_users );
+  $("#id_shared").val(JSON.stringify( {
+    'bindings': bindings,
+    'bind_users': bind_users,
+    'admin_users': admin_users
+  }));
+});
+
 $("#volumeConfigTabs li a").on("click", function () {
   var tab = $( this ).attr("id").split('-')[1]
   console.log( tab )
-  $.cookie("configure_volume_tab", tab, { 'path': '/', 'secure': true });
+  $.cookie("configure_volume_tab", tab, { 'path': '/;SameSite=Strict', 'secure': true });
 });
 </script>
 <script>
