--- a/kooplexhub/hub/templates/layout.html
+++ b/kooplexhub/hub/templates/layout.html
@@ -37,7 +37,7 @@
       <main class="w-100">
       {% block content %}
         {% block header %}
-        <div class="container-fluid bg-dark" style="max-height: 105px;">
+        <div class="container-fluid bg-dark" style="max-height: 105px;" id="topbar">
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex">
             <div class="container-fluid d-flex flex-column flex-md-row flex-column-reverse">
               {% if user.is_authenticated %}
@@ -113,7 +113,11 @@
         {% endblock %}
 
 	{# the main content is rendered here #}
-        <div class="m-2" style="height: calc(100vh - 105px); overflow-y: scroll;">
+        <div class="m-2" id="searchblock">
+	{% block search %}
+        {% endblock %}
+        </div>
+        <div class="m-2" style="overflow-y: scroll;" id="bodyblock">
 	{% block bodycontent %}
         {% endblock %}
         </div>
@@ -142,7 +146,6 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" 
 	    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-
 
   </body>
 </html>
