--- a/kooplexhub/project/templates/project_list.html
+++ b/kooplexhub/project/templates/project_list.html
@@ -4,8 +4,9 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/css/bootstrap5-toggle.min.css" rel="stylesheet">
 {% endblock %}
 
-{% block bodycontent %}
+
 {# the search bar #}
+{% block search %}
 {% if userprojectbindinglist %}
 <div class="card border border-light border-3 mx-5 mb-3 rounded-3">
   <div class="input-group">
@@ -21,8 +22,11 @@
   </div>
 </div>
 {% endif %}
+{% endblock %}
+
 
 {# render the project cards #}
+{% block bodycontent %}
 {% if userprojectbindinglist|length %}
   <div class="row row-cols-1 row-cols-md-2">
     {% for upb in userprojectbindinglist %}
@@ -34,8 +38,8 @@
 {% else %}
   {% include 'empty.html' %}
 {% endif %}
-
 {% endblock %}
+
 
 {% block scripts %}
 <script>
