--- a/kooplexhub/container/templates/container_configure.html
+++ b/kooplexhub/container/templates/container_configure.html
@@ -10,7 +10,6 @@
 
 
 {% block bodycontent %}
-<div class="m-2" style="height: calc(100vh - 105px); overflow-y: scroll; overflow-x:hidden;">
 <div class="card shadow p-3 mb-5 bg-light rounded">
 <form id="container-manage" class="form-horizontal" action="{% url 'container:configure_save' %}" method="post">
 {% csrf_token %}
@@ -104,21 +103,16 @@
 
 </form>
 </div>
-</div>
 {% endblock %}
 
 
 {% block scripts %}
 <script>
-$("#serviceConfigTabs li a").on("click", function () {
-  var tab = $( this ).attr("id").split('-')[1]
-  console.log( tab )
-  if (tab != "delete") {
-    $.cookie("configure_env_tab", tab, { 'path': '/;SameSite=Strict', 'secure': true });
-  }
-});
-$("select[name='image'").change(function() {
-    $( "select option:selected" ).each(function() {
+containerSocket = open_ws('{{ wss_container }}', ws_callback);
+
+{# when image selection changes, display the details in info panel #}
+$("select[name='image']").change(function() {
+    $( "select[name='image'] option:selected" ).each(function() {
         var id = $(this).attr("value");
         console.log( $( this ).text() + " -> " + id);
 	if (id === "") {
@@ -129,6 +123,62 @@ $("select[name='image'").change(function() {
 	}
     });
 }).change();
+
+{# handle websocket callback #}
+function ws_callback(data) {
+  //console.log(data);
+  var command = data['command'];
+  var msg = data['message'];
+  var containerid = data['container-id'];
+  //console.log('SOCK: --> ' + command + ": " + msg);
+  if (command == 'monitor-node') {
+    console.log(data);
+    $("input[name='cpurequest']").attr("max", data["avail_cpu"]);
+    $("input[name='memoryrequest']").attr("max", data["avail_memory"]);
+    $("input[name='gpurequest']").attr("max", data["avail_gpu"]);
+    $("#thresholdhigh-cpurequest").text(data["total_cpu"]);
+    $("#thresholdhigh-memoryrequest").text(data["total_memory"]);
+    $("#thresholdhigh-gpurequest").text(data["total_gpu"]);
+    selected = $( "select[name='node'] option:selected" )[0];
+    sel_node = $(selected).val();
+    if (sel_node == data['node'] || (sel_node == '')) {
+        $("#busybar").addClass("d-none");
+        $("input[name$='request'").each(function() { 
+          if ($(this).attr("max") > 0) {
+	    $(this).attr('disabled', false ) 
+	  }
+	});
+    }
+  }
+};
+
+{# when node selection changes, retrieve node details #}
+$("select[name='node']").change(function() {
+    $( "select[name='node'] option:selected" ).each(function() {
+        var node = $(this).attr("value");
+        if (containerSocket.readyState != 1) {
+          console.log("Socket not open: " + containerSocket.readyState);
+          containerSocket = open_ws('{{ wss_container }}', ws_callback);
+        }
+	if (node != "") {
+          containerSocket.send(JSON.stringify({
+            'command': 'monitor-node',
+            'node': node,
+          }));
+	  $("#busybar").removeClass("d-none");
+	  $("input[name$='request'").each(function() { $(this).attr('disabled', true ) });
+	}
+    });
+}).change();
+
+{# save active tab in a cookie #}
+$("#serviceConfigTabs li a").on("click", function () {
+  var tab = $( this ).attr("id").split('-')[1]
+  console.log( tab )
+  if (tab != "delete") {
+    $.cookie("configure_env_tab", tab, { 'path': '/;SameSite=Strict', 'secure': true });
+  }
+});
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/js/bootstrap5-toggle.min.js"></script>
 {% endblock %}
