--- a/kooplexhub/project/templates/project_configure.html
+++ b/kooplexhub/project/templates/project_configure.html
@@ -9,7 +9,7 @@
 {% block bodycontent %}
 <div class="container" style="overflow-x:hidden;">
 <div class="card shadow p-3 mt-3 mb-3 bg-light rounded">
-  <form id="project-manage" class="form-horizontal was-validated" action="{% url 'project:configure_save' %}" method="post">
+  <form id="project-manage" class="form-horizontal was-validated" action="{{ url_post }}" method="post">
   {% csrf_token %}
   {% title_with_button "You are now configuring <em>" project.name "</em> project" %}
   <input type="hidden" name="project_id" value="{{ project.id }}">
@@ -27,29 +27,57 @@
     <li class="nav-item" role="presentation">
       <a class="nav-link mytab {% if active == "service" %}active{% endif %}"
          id="tab-service" data-bs-toggle="tab" href="#service" role="tab" aria-controls="service" 
-         aria-selected=""{% if active == "service" %}true{% else %}false{% endif %}>Container environments</a>
+         aria-selected=""{% if active == "service" %}true{% else %}false{% endif %}>Environments</a>
     </li>
   </ul>
   <div class="tab-content" id="projectConfogTabsContent">
     <div class="tab-pane fade {% if active == "meta" %}show active{% endif %}" id="meta" role="tabpanel" aria-labelledby="tab-meta">
-      <table class="mt-3">
-        {{ form.as_table }}
-      </table>
+      <div class="container-fluid d-flex flex-column flex-md-row">
+        <div class="d-flex w-100 w-md-75">
+          <table>
+            {{ form.as_table }}
+          </table>
+        </div>
+        <div class="d-flex ms-3 w-100 w-md-50">
+          <div data-toggle="tooltip" title="Please select an option from the image dropdown to check its description." class="d-flex bg-warning rounded p-2 w-100 mt-2 mt-md-0">
+            <p class="fw-bolder">Image description:&nbsp;</p>
+            <p id="imageDescription"></p>
+          </div>
+        </div>
+        {{ form.descriptions }}
+      </div>
     </div>
     <div class="tab-pane fade {% if active == "collaboration" %}show active{% endif %}" id="collaboration" role="tabpanel" aria-labelledby="tab-collaboration">
-      {% include 'project_collaboration.html' %}
+	    {% comment %}
+      <div class="container-fluid d-flex flex-column flex-md-row">
+        <div class="d-flex w-100 w-md-75">
+	    {% endcomment %}
+          <div class="input-group">
+            <span class="input-group-text"><span class="bi bi-search"></span></span>
+            <input class="form-control" type="text" id="search_collaborator" placeholder="Search collaborator" title="Type in a name">
+          </div>
+          {% render_table form.t_users %}
+	    {% comment %}
+        </div>
+        <div class="d-flex ms-3 w-100 w-md-50">
+	    {% endcomment %}
+          {% render_table form.t_collaborators %}
+	    {% comment %}
+        </div>
+      </div>
+	    {% endcomment %}
     </div>
     <div class="tab-pane fade {% if active == "service" %}show active{% endif %}" id="service" role="tabpanel" aria-labelledby="tab-service">
-      {% if t_all_services %}
-      <div class="input-group m-3">
+      {% if form.t_services %}
+      <div class="input-group">
         <span class="input-group-text"><span class="bi bi-search"></span></span>
         <input class="form-control" type="text" id="search_container" placeholder="Search environment" title="Type in a name" >
       </div>
       <div>
-        {% render_table t_all_services %}
+        {% render_table form.t_services %}
       </div>
       {% else %}
-      <p>You'll need to <a href="{% url 'container:new' %}">create</a> an environmant first.</p>
+      <p>You'll need to <a href="{% url 'container:new' %}">create</a> an environment first.</p>
       {% endif %}
     </div>
   </div>
@@ -59,11 +87,83 @@
 {% endblock %}
 
 {% block scripts %}
-<script>  
+<script> 
+{# check if widget belongs to collaborator table #}
+function tc(obj) {
+  return $(obj).parent().parent().parent().parent().parent().parent().attr('id') === 'collaborators';
+}
+
+{# when image selection changes, render appropriate image descriptions #}
+$("select[name='preferred_image']").change(function() {
+  $( "#id_preferred_image option:selected" ).each(function() {
+    id = $(this).attr("value");
+    if (id === "") {
+      $("#imageDescription").text("");
+    } else {
+      description = $("#image-description-" + id).attr("value");
+      $("#imageDescription").text(description);
+    }
+  });
+}).change();
+
+{# catch submit event, in order to fill properly the share volume information #}
+$("#project-manage").submit(function (e) {
+  bind_container_ids = $.map($("input[id^=containertoggler-]"), function (k, v) { if ($(k).prop('checked')) { return $(k).val() } }); 
+  bind_user_ids = $.map($("input[id^=admin-]"), function (k, v) { if (tc(k)) { return $(k).val(); } });
+  admin_users = $.map($("input[id^=admin-]"), function (k, v) { if (tc($(k))) { if ($(k).prop('checked')) { return $(k).val() } }; }); 
+  $("#id_project_config").val(JSON.stringify( {
+    'user_id': {{ user.id }},
+    'project_id': "{{ project.id }}",
+    'bind_container_ids': bind_container_ids,
+    'bind_user_ids': bind_user_ids,
+    'admin_users': admin_users
+  }));
+});
+
+{# remember which tab was active #}
 $("#projectConfigTabs li a").on("click", function () {
-  var tab = $( this ).attr("id").split('-')[1]
+  tab = $( this ).attr("id").split('-', 2)[1]
   console.log( tab )
-  $.cookie("configure_project_tab", tab, { 'path': '/', 'secure': true });
+  $.cookie("configure_project_tab", tab, { 'path': '/;SameSite=Strict', 'secure': true });
+});
+
+{# handle clicking on table rows #}
+$("span[id^='userid-'").click(function() {
+  userid = $( this ).attr("id").split("-", 2)[1];
+  w_admin = $("#admintoggler-" + userid);
+  tr = $( this ).parent().parent();
+  table_id = tr.parent().parent().attr("id");
+  console.log( table_id );
+  if (table_id === "users") {
+    other_table = $("#collaborators");
+    w_admin.removeClass("d-none");
+  } else {
+    other_table = $("#users");
+    w_admin.addClass("d-none");
+  }
+  other_table.children("tbody").append(tr);
+});
+
+{# hide all table rows except for those matching #}
+function is_visible_callback(obj, obj_id, is_empty, is_found) {
+  if (obj == 'collaborator') {
+    if (is_empty) {
+      return false;
+    }
+    return is_found;
+  }
+  if (obj == 'container') {
+    return is_found;
+  }
+  return true;
+}
+{# trigger set_visibility #}
+$("#search_collaborator").keyup();
+$("#search_container").keyup();
+
+{# rewrite table header #}
+$(document).ready(function() {
+  $("#users").find("th").text("Users");
 });
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/js/bootstrap5-toggle.min.js"></script>
