--- a/kooplexhub/project/templates/project_configure.html
+++ b/kooplexhub/project/templates/project_configure.html
@@ -7,12 +7,11 @@
 {% endblock %}
 
 {% block bodycontent %}
-<div class="container" style="overflow-x:hidden;">
-<div class="card shadow p-3 mt-3 mb-3 bg-light rounded">
+<div class="container card shadow p-3 mt-3 mb-3 bg-light rounded">
   <form id="project-manage" class="form-horizontal was-validated" action="{{ url_post }}" method="post">
   {% csrf_token %}
   {% title_with_button "You are now configuring <em>" project.name "</em> project" %}
-  <input type="hidden" name="project_id" value="{{ project.id }}">
+  {#<input type="hidden" name="project_id" value="{{ project.id }}"> FIXME: unused I guess #}
   <ul class="nav nav-tabs" id="projectConfigTabs" role="tablist">
     <li class="nav-item" role="presentation">
       <a class="nav-link mytab {% if active == "meta" %}active{% endif %}" 
@@ -30,42 +29,40 @@
          aria-selected=""{% if active == "service" %}true{% else %}false{% endif %}>Environments</a>
     </li>
   </ul>
-  <div class="tab-content" id="projectConfogTabsContent">
+  <div class="tab-content mt-3" id="projectConfogTabsContent">
     <div class="tab-pane fade {% if active == "meta" %}show active{% endif %}" id="meta" role="tabpanel" aria-labelledby="tab-meta">
-      <div class="container-fluid d-flex flex-column flex-md-row">
-        <div class="d-flex w-100 w-md-75">
-          <table>
-            {{ form.as_table }}
-          </table>
-        </div>
-        <div class="d-flex ms-3 w-100 w-md-50">
-          <div data-toggle="tooltip" title="Please select an option from the image dropdown to check its description." class="d-flex bg-warning rounded p-2 w-100 mt-2 mt-md-0">
-            <p class="fw-bolder">Image description:&nbsp;</p>
-            <p id="imageDescription"></p>
+      <div class="container-fluid">
+        <div class="row row-cols-1 row-cols-md-2">
+	  <div class="col">
+            <table>
+              {{ form.as_table }}
+            </table>
+          </div>
+	  <div class="col"> {# hide is small #}
+            <div data-toggle="tooltip" title="Please select an option from the image dropdown to check its description." class="d-flex bg-warning rounded p-2 w-100 mt-2 mt-md-0">
+              <p class="fw-bolder">Image description:&nbsp;</p>
+              <p id="imageDescription"></p>
+              {{ form.descriptions }}
+            </div>
           </div>
         </div>
-        {{ form.descriptions }}
       </div>
     </div>
     <div class="tab-pane fade {% if active == "collaboration" %}show active{% endif %}" id="collaboration" role="tabpanel" aria-labelledby="tab-collaboration">
-	    {% comment %}
-      <div class="container-fluid d-flex flex-column flex-md-row">
-        <div class="d-flex w-100 w-md-75">
-	    {% endcomment %}
-          <div class="input-group">
-            <span class="input-group-text"><span class="bi bi-search"></span></span>
-            <input class="form-control" type="text" id="search_collaborator" placeholder="Search collaborator" title="Type in a name">
+      <div class="container-fluid">
+        <div class="row row-cols-1 row-cols-md-2">
+	  <div class="col">
+            <div class="input-group">
+              <span class="input-group-text"><span class="bi bi-search"></span></span>
+              <input class="form-control" type="text" id="search_collaborator" placeholder="Search collaborator" title="Type in a name">
+            </div>
+            {% render_table form.t_users %}
           </div>
-          {% render_table form.t_users %}
-	    {% comment %}
-        </div>
-        <div class="d-flex ms-3 w-100 w-md-50">
-	    {% endcomment %}
-          {% render_table form.t_collaborators %}
-	    {% comment %}
+          <div class="col">
+            {% render_table form.t_collaborators %}
+          </div>
         </div>
       </div>
-	    {% endcomment %}
     </div>
     <div class="tab-pane fade {% if active == "service" %}show active{% endif %}" id="service" role="tabpanel" aria-labelledby="tab-service">
       {% if form.t_services %}
@@ -82,7 +79,6 @@
     </div>
   </div>
   </form>
-</div>
 </div>
 {% endblock %}
 
