--- a/kooplexhub/project/templates/project_configure.html
+++ b/kooplexhub/project/templates/project_configure.html
@@ -9,75 +9,86 @@
 {% block bodycontent %}
 <div class="container card shadow p-3 mt-3 mb-3 bg-light rounded">
   <form id="project-manage" class="form-horizontal was-validated" action="{{ url_post }}" method="post">
-  {% csrf_token %}
-  {% title_with_button "You are now configuring <em>" project.name "</em> project" %}
-  {#<input type="hidden" name="project_id" value="{{ project.id }}"> FIXME: unused I guess #}
-  <ul class="nav nav-tabs" id="projectConfigTabs" role="tablist">
-    <li class="nav-item" role="presentation">
-      <a class="nav-link mytab {% if active == "meta" %}active{% endif %}" 
-         id="tab-meta" data-bs-toggle="tab" href="#meta" role="tab" aria-controls="meta" 
-         aria-selected="{% if active == "meta" %}true{% else %}false{% endif %}">Meta</a>
-    </li>
-    <li class="nav-item" role="presentation">
-      <a class="nav-link mytab {% if active == "collaboration" %}active{% endif %}" 
-         id="tab-collaboration" data-bs-toggle="tab" href="#collaboration" role="tab" aria-controls="collaboration" 
-         aria-selected="{% if active == "collaboration" %}true{% else %}false{% endif %}">Collaboration</a>
-    </li>
-    <li class="nav-item" role="presentation">
-      <a class="nav-link mytab {% if active == "service" %}active{% endif %}"
-         id="tab-service" data-bs-toggle="tab" href="#service" role="tab" aria-controls="service" 
-         aria-selected=""{% if active == "service" %}true{% else %}false{% endif %}>Environments</a>
-    </li>
-  </ul>
-  <div class="tab-content mt-3" id="projectConfogTabsContent">
-    <div class="tab-pane fade {% if active == "meta" %}show active{% endif %}" id="meta" role="tabpanel" aria-labelledby="tab-meta">
-      <div class="container-fluid">
-        <div class="row row-cols-1 row-cols-md-2">
-	  <div class="col">
-            <table>
-              {{ form.as_table }}
-            </table>
-          </div>
-	  <div class="col"> {# hide is small #}
-            <div data-toggle="tooltip" title="Please select an option from the image dropdown to check its description." class="d-flex bg-warning rounded p-2 w-100 mt-2 mt-md-0">
-              <p class="fw-bolder">Image description:&nbsp;</p>
-              <p id="imageDescription"></p>
-              {{ form.descriptions }}
+    {% csrf_token %}
+    {% title_with_button "You are now configuring <em>" project.name "</em> project" %}
+    <ul class="nav nav-tabs" id="projectConfigTabs" role="tablist">
+      <li class="nav-item" role="presentation">
+        <a class="nav-link mytab {% if active == "meta" %}active{% endif %}" 
+           id="tab-meta" data-bs-toggle="tab" href="#meta" role="tab" aria-controls="meta" 
+           aria-selected="{% if active == "meta" %}true{% else %}false{% endif %}">Meta</a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link mytab {% if active == "collaboration" %}active{% endif %}" 
+           id="tab-collaboration" data-bs-toggle="tab" href="#collaboration" role="tab" aria-controls="collaboration" 
+           aria-selected="{% if active == "collaboration" %}true{% else %}false{% endif %}">Collaboration</a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link mytab {% if active == "service" %}active{% endif %}"
+           id="tab-service" data-bs-toggle="tab" href="#service" role="tab" aria-controls="service" 
+           aria-selected=""{% if active == "service" %}true{% else %}false{% endif %}>Environments</a>
+      </li>
+  {% if project.id %}
+      <li class="nav-item {% if active == "delete" %}active{% endif %}" role="presentation" aria-selected="{% if active == "delete" %}true{% else %}false{% endif %}">
+        <a class="nav-link mytab text-danger" id="tab-delete" data-bs-toggle="tab" href="#delete" role="tab" aria-controls="delete" aria-selected="false">Delete</a>
+      </li>
+  {% endif %}
+    </ul>
+    <div class="tab-content mt-3" id="projectConfogTabsContent">
+      <div class="tab-pane fade {% if active == "meta" %}show active{% endif %}" id="meta" role="tabpanel" aria-labelledby="tab-meta">
+        <div class="container-fluid">
+          <div class="row row-cols-1 row-cols-md-2">
+  	  <div class="col">
+              <table>
+                {{ form.as_table }}
+              </table>
+            </div>
+  	  <div class="col"> {# hide if small #}
+              <div data-toggle="tooltip" title="Please select an option from the image dropdown to check its description." class="d-flex bg-warning rounded p-2 w-100 mt-2 mt-md-0">
+                <p class="fw-bolder">Image description:&nbsp;</p>
+                <p id="imageDescription"></p>
+                <img id="imageThumbnail" alt="TODO">
+                {{ form.descriptions }}
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="tab-pane fade {% if active == "collaboration" %}show active{% endif %}" id="collaboration" role="tabpanel" aria-labelledby="tab-collaboration">
-      <div class="container-fluid">
-        <div class="row row-cols-1 row-cols-md-2">
-	  <div class="col">
-            <div class="input-group">
-              <span class="input-group-text"><span class="bi bi-search"></span></span>
-              <input class="form-control" type="text" id="search_collaborator" placeholder="Search collaborator" title="Type in a name">
+      <div class="tab-pane fade {% if active == "collaboration" %}show active{% endif %}" id="collaboration" role="tabpanel" aria-labelledby="tab-collaboration">
+        <div class="container-fluid">
+          <div class="row row-cols-1 row-cols-md-2">
+  	  <div class="col">
+              <div class="input-group">
+                <span class="input-group-text"><span class="bi bi-search"></span></span>
+                <input class="form-control" type="text" id="search_collaborator" placeholder="Search collaborator" title="Type in a name">
+              </div>
+              {% render_table form.t_users %}
             </div>
-            {% render_table form.t_users %}
-          </div>
-          <div class="col">
-            {% render_table form.t_collaborators %}
+            <div class="col">
+              {% render_table form.t_collaborators %}
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="tab-pane fade {% if active == "service" %}show active{% endif %}" id="service" role="tabpanel" aria-labelledby="tab-service">
-      {% if form.t_services %}
-      <div class="input-group">
-        <span class="input-group-text"><span class="bi bi-search"></span></span>
-        <input class="form-control" type="text" id="search_container" placeholder="Search environment" title="Type in a name" >
+      <div class="tab-pane fade {% if active == "service" %}show active{% endif %}" id="service" role="tabpanel" aria-labelledby="tab-service">
+        {% if form.t_services %}
+        <div class="input-group">
+          <span class="input-group-text"><span class="bi bi-search"></span></span>
+          <input class="form-control" type="text" id="search_container" placeholder="Search environment" title="Type in a name" >
+        </div>
+        <div>
+          {% render_table form.t_services %}
+        </div>
+        {% else %}
+        <p>You'll need to <a href="{% url 'container:new' %}">create</a> an environment first.</p>
+        {% endif %}
       </div>
-      <div>
-        {% render_table form.t_services %}
+  {% if container.id %}
+      <div class="tab-pane fade {% if active == "delete" %}show active{% endif %}" id="delete" role="tabpanel" aria-labelledby="tab-delete">
+        <p>Delete your project by clicking the dustbin...</p>
+        {% button_project_delete project %}
       </div>
-      {% else %}
-      <p>You'll need to <a href="{% url 'container:new' %}">create</a> an environment first.</p>
-      {% endif %}
+  {% endif %}
     </div>
-  </div>
   </form>
 </div>
 {% endblock %}
