--- a/kooplexhub/project/templates/project_configure.html
+++ b/kooplexhub/project/templates/project_configure.html
@@ -1,6 +1,7 @@
 {% extends "project_layout.html" %}
 {% load render_table from django_tables2 %}
 {% load extras %}
+{% load project_buttons %}
 
 {% block head_content %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/css/bootstrap5-toggle.min.css" rel="stylesheet">
@@ -82,7 +83,7 @@
         <p>You'll need to <a href="{% url 'container:new' %}">create</a> an environment first.</p>
         {% endif %}
       </div>
-  {% if container.id %}
+  {% if project.id %}
       <div class="tab-pane fade {% if active == "delete" %}show active{% endif %}" id="delete" role="tabpanel" aria-labelledby="tab-delete">
         <p>Delete your project by clicking the dustbin...</p>
         {% button_project_delete project %}
